# gst-plugins-ugly

./: configure.ac
ext/a52dec/: Makefile.am  gsta52dec.c
ext/amrnb/: Makefile.am  amrnb.c
ext/amrwbdec/: Makefile.am  amrwb.c
ext/cdio/: Makefile.am  gstcdio.c
ext/dvdread/: Makefile.am  dvdreadsrc.c
ext/lame/: Makefile.am  plugin.c
ext/mad/: Makefile.am  gstmad.c
ext/mpeg2dec/: Makefile.am  gstmpeg2dec.c
ext/sidplay/: Makefile.am  gstsiddec.cc
ext/twolame/: Makefile.am  gsttwolame.c
ext/x264/: Makefile.am  gstx264enc.c
gst/asfdemux/: Makefile.am  asfpacket.c  asfpacket.h  gstasf.c  gstasfdemux.c
gst/dvdlpcmdec/: Makefile.am  gstdvdlpcmdec.c
gst/dvdsub/: Makefile.am  gstdvdsubdec.c
gst/iec958/: Makefile.am  ac3iec.c
gst/mpegaudioparse/: Makefile.am  plugin.c
gst/mpegstream/: Makefile.am  gstmpegstream.c
gst/realmedia/: Makefile.am  realmedia.c
gst/synaesthesia/: Makefile.am  gstsynaesthesia.c
